<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bmi Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_imperial">ImperialActivity</string>
    <string name="title_activity_metric">MetricActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="WeightLabel">Weight</string>
    <string name="poundsLabel">0 Ibs</string>
    <string name="HeightLabel">Height</string>
    <string name="feet">ft.</string>
    <string name="inches">in.</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate Bmi</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="bmi">Your bmi is:</string>
    <string name="kgLabel">0 kg</string>
    <string name="cmLabel">0 cm</string>
    <string name="bmiCategories">BMI Categories:</string>
    <string name="underweight">Underweight = 18.5 or less</string>
    <string name="normal">Normal weight = 18.5 &#8211; 24.9</string>
    <string name="overweight">Overweight = 25 &#8211; 29.9</string>
    <string name="obesity">Obesity = BMI of 30 or greater</string>
    <string name="info">i</string>
    <string name="save">Save Bmi to history</string>
    <string name="history">History</string>
    <string name="infoButton">Information Button</string>
</resources>