<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".ResultActivity" >

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/bmi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/saveToDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bmiTextView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="15dp"
        android:text="@string/save" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveToDB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/background2"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmiCategories"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/underweight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overweight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obesity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red" />
    </LinearLayout>

</RelativeLayout>